# example-rust-gashapon

./: 404.html  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: gitpages.yml
assets/: gashapon_ui-37950a42f423a21c.js  gashapon_ui-37950a42f423a21c.js.br  gashapon_ui-d2cfbc708b215bbb.js  gashapon_ui-d2cfbc708b215bbb.js.br  gashapon_ui-e09914c023b5ae5f.js  gashapon_ui-e09914c023b5ae5f.js.br  gashapon_ui_bg-1f28e14bea0011d5.wasm  gashapon_ui_bg-1f28e14bea0011d5.wasm.br  gashapon_ui_bg-34b617bc08d572e4.wasm  gashapon_ui_bg-34b617bc08d572e4.wasm.br  gashapon_ui_bg-71a34c0110580573.wasm  gashapon_ui_bg-71a34c0110580573.wasm.br  gashapon_ui_bg-a6a601093612e52d.wasm  gashapon_ui_bg-a6a601093612e52d.wasm.br  gashapon_ui_bg-d6e8a971ec107775.wasm  gashapon_ui_bg-d6e8a971ec107775.wasm.br  gashapon_ui_bg-f23a816c4ab7f6dd.wasm  gashapon_ui_bg-f23a816c4ab7f6dd.wasm.br  main-60dea69d721b5f4a.css  main-60dea69d721b5f4a.css.br  main-7901e9f14a81a20e.css  main-7901e9f14a81a20e.css.br  main-83c777323f192b10.css  main-83c777323f192b10.css.br
gashapon/: Cargo.toml
gashapon/src/: lib.rs
gashapon_ui/: Cargo.toml  Dioxus.toml
gashapon_ui/assets/: main.css
gashapon_ui/src/: main.rs
src/: lib.rs  main.rs  utils.rs
web/: index.html
